# SimpleMMM

./: .env.example  .gitignore  .trivyignore  LICENSE  README.md  README_CN.md
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  Dockerfile.base  Dockerfile.worker  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_dataset_modelconfig_modelresult.py  003_add_project_members.py  004_add_project_settings.py  005_add_dataset_versioning.py  006_add_password_reset_tokens.py  007_add_scenarios.py  008_add_variable_groups.py  009_add_hierarchical_models.py  010_add_variable_metadata.py  011_add_seasonality_to_model_config.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  deps.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  dataset.py  hierarchical_model.py  model_config.py  model_result.py  password_reset.py  project.py  project_member.py  scenario.py  user.py  variable_group.py  variable_metadata.py
backend/app/repositories/: __init__.py  base.py  dataset.py  model_config.py  password_reset.py  project.py  scenario.py  user.py
backend/app/schemas/: __init__.py  base.py  constraint_validation.py  constraints.py  dataset.py  hierarchical.py  model_config.py  priors.py  project.py  project_member.py  responses.py  scenario.py  user.py  variable_group.py  variable_metadata.py
backend/app/services/: __init__.py  data_processor.py  file_storage.py  seasonality.py
backend/app/utils/: __init__.py
backend/app/workers/: __init__.py  celery_app.py  db.py  tasks.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_projects.py
(+183 files in other folders)
